--- a/index.html
+++ b/index.html
@@ -979,10 +979,11 @@
                     🔥 80% de desconto aplicado
                 </div>
 
-                <div class="total-value">De R$ 481,00</div>
                 <div class="final-price">R$ 97</div>
-                <div class="installment">ou 3x de R$ 32,33 sem juros</div>
-
+<div class="installment">ou 12x de R$ 10,03 no cartão</div>
+<p style="font-size: 16px; color: #daa520; margin-top: 15px; font-weight: 700;">
+    💡 Menos que 2 cafés por mês
+</p>
                 <a href="[INSERIR LINK CHECKOUT HOTMART]" class="cta-button" style="margin-top: 30px;">Garantir minha vaga agora</a>
 
                 <div class="security-badges" style="margin-top: 25px; justify-content: center;">
