--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
         </div>
         <h3 style="font-size: 22px; color: #daa520; margin-bottom: 12px;">🎯 Consultoria Estratégica 1 hora</h3>
         <p style="color: rgba(255,255,255,0.95); font-size: 15px; line-height: 1.7;">
-            Sessão individual com especialista da RedattoLAB. Após a compra, você agenda via WhatsApp. Preenchemos juntos um diagnóstico antes da sessão para aproveitar cada minuto. Você sai com plano de ação claro e insights práticos. Sem enrolação, só resultado.
+            Sessão individual com especialista da RedattoLAB. Após a compra, você agenda via WhatsApp. Preenchemos juntos um diagnóstico antes da sessão para aproveitar cada minuto. Você sai com plano de ação claro e insights práticos. Sem enrolação, só resultado. Disponível no kit somente para quem adquirir nas 72 horas de lançamento. Após esse período, o bônus será retirado e o preço do kit será mantido.
         </p>
     </div>
 
