--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                     </div>
                     <div class="whatsapp-identity">
                         <div class="whatsapp-identity-name">Natália M.</div>
-                        <div class="whatsapp-identity-info">Corretora autônoma há 3 anos • Caxias do Sul</div>
+                        <div class="whatsapp-identity-info">Corretora há 3 anos • Caxias do Sul</div>
                         <div class="whatsapp-verified">✓✓ Verificado via WhatsApp</div>
                     </div>
                 </div>
