--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,25 @@
                 <span class="countdown-timer" id="countdown-final">71:59:00</span>
             </div>
 
-            <a href="https://pay.hotmart.com/K102596943O" class="
+            <a href="https://pay.hotmart.com/K102596943O" class="cta-button">Garantir minha vaga na turma estrategista</a>
+            
+            <div style="margin-top: 40px; font-size: 16px; color: #daa520; font-weight: 700;">
+                ✅ Preço promocional: R$ 97 por apenas 72 horas
+            </div>
+
+            <div class="security-badges" style="margin-top: 30px; justify-content: center;">
+                <div class="security-badge-item">
+                    <span>🔒</span> Pagamento seguro
+                </div>
+                <div class="security-badge-item">
+                    <span>🛡️</span> Garantia 7 dias
+                </div>
+                <div class="security-badge-item">
+                    <span>💳</span> Parcelamento disponível
+                </div>
+            </div>
+        </div>
+    </section>
                 <!-- FOOTER -->
     <footer>
         <div class="container">
